deleted class tag 'main'

--- a/pre_cours/css_intro/task_2/index.html
+++ b/pre_cours/css_intro/task_2/index.html
@@ -7,7 +7,7 @@
     <title>Класс</title>
   </head>
   <body>
-    <main class="main">
+    <main>
       <p class="text">Изученные CSS свойства</p>
       <ul class ="list">
         <li>width - ширина блока, не применяется для инлайновых элементов</li>
