--- a/pre_cours/css_intro/task_4/index.html
+++ b/pre_cours/css_intro/task_4/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title>Класс</title>
-      </head>
 
-  <body>
-    <header class="header">
-      <h1 clss="title">Главный заголовок на странице</h1>
-    </header>
-    <main class="main">
-      <p>Семантическая верстка позволяет поисковым система лучшем понять контент страницы</p>
-    </main>
-    <footer class="footer">Не забываем сбрасывать стили браузера по умолчанию</footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="style.css">
+  <title>Класс</title>
+</head>
+
+<body>
+  <header class="header">
+    <h1 clss="title">Главный заголовок на странице</h1>
+  </header>
+  <main class="main">
+    <p>Семантическая верстка позволяет поисковым система лучшем понять контент страницы</p>
+  </main>
+  <footer class="footer">Не забываем сбрасывать стили браузера по умолчанию</footer>
+</body>
 
 </html>
