chenged text color

--- a/pre_cours/css_intro/task_4/index.html
+++ b/pre_cours/css_intro/task_4/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="header">
-    <h1 clss="title">Главный заголовок на странице</h1>
+    <h1 class="title">Главный заголовок на странице</h1>
   </header>
   <main class="main">
     <p>Семантическая верстка позволяет поисковым система лучшем понять контент страницы</p>
