--- a/pre_cours/selectors_basics/task_1/index.html
+++ b/pre_cours/selectors_basics/task_1/index.html
@@ -6,7 +6,8 @@
   <title>Селекторы атрибутов</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-</head>
+  <link rel="stylesheet" href="style.css">
+  </head>
 
 <body>
   <header>
