--- a/pre_cours/selectors_basics/task_3/index.html
+++ b/pre_cours/selectors_basics/task_3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Basic Selectors</title>
+    <title>Selectors Exercise</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -13,24 +13,23 @@
   </head>
 
   <body>
-    <h1 class="page-header">Basic Selectors</h1>
-
-    <article>
-      <h2 class="page-header">Базовыми селекторами являются:</h2>
-      <ul>
-        <li>Селектор элемента</li>
-        <li id="best">Селектор класса</li>
-        <li>Селектор id</li>
-        <li>Универсальный селектор *</li>
-      </ul>
-    </article>
-
-    <article>
-      <h2 class="page-header">Селекторы</h2>
-      <p>
-        Используются для того, чтобы удобно выбирать нужные элементы страницы и задавать им
-        определенные стили
-      </p>
-    </article>
+    <div class="description-text">
+      <p class="super-important highlighted">Super important highlighted text</p>
+      <p class="highlighted">Less important text</p>
+      <p>Really not so important paragraph</p>
+      <div>
+        <span class="user-data">First name</span>
+        <span class="user-data">Last name</span>
+        <span class="company-data">Last name</span>
+        <span class="user-data">Last name</span>
+      </div>
+      <div>
+        <p>User roles</p>
+        <ul>
+          <li class="user-data">Product development</li>
+          <li class="user-data">Mentoring</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
