--- a/pre_cours/8_box_model/task_1/index.html
+++ b/pre_cours/8_box_model/task_1/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="content-box size">
-        'Content Box Sizing'
+        Content Box Sizing
     </div>
 
     <div class="border-box size">
-        'Border Box Sizing'
+        Border Box Sizing
     </div>
 </body>
 </html>
