--- a/pre_cours/8_box_model/task_2/index.html
+++ b/pre_cours/8_box_model/task_2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="border">
-        <h2>I am colorful rectangle</h2>
+        I am colorful rectangle
     </div>
 </body>
 </html>
