--- a/pre_cours/8_box_model/task_3/index.html
+++ b/pre_cours/8_box_model/task_3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="border">
-        I am learning box modell in CSS!
+        I am learning box model in CSS!
     </div>
     <div class="border">
         I am learning box modell in CSS
