--- a/pre_cours/8_box_model/task_3/index.html
+++ b/pre_cours/8_box_model/task_3/index.html
@@ -20,5 +20,8 @@
     <div class="border">
         I am learning box modell in CSS
     </div>
+    <div class="border">
+        I am learning box modell in CSS
+    </div>
 </body>
 </html>
