changed div text

--- a/pre_cours/8_box_model/task_3/index.html
+++ b/pre_cours/8_box_model/task_3/index.html
@@ -12,16 +12,16 @@
         I am learning box model in CSS!
     </div>
     <div class="border">
-        I am learning box modell in CSS
+        I am learning box modell in CSS!
     </div>
     <div class="border">
-        I am learning box modell in CSS
+        I am learning box modell in CSS!
     </div>
     <div class="border">
-        I am learning box modell in CSS
+        I am learning box modell in CSS!
     </div>
     <div class="border">
-        I am learning box modell in CSS
+        I am learning box modell in CSS!
     </div>
 </body>
 </html>
