--- a/live_coding/less_2(layout)/index.html
+++ b/live_coding/less_2(layout)/index.html
@@ -3,36 +3,38 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Layout</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-    integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device=width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>JACKETS</title>
 </head>
 
 <body>
-  <nav class"nav">
-    <div class"nav__title">
+  <nav class="nav">
+    <div class="nav__title">JACKETS</div>
 
-    </div>
-    <div class"nav__search">
-      <div class"nav__filter">
-        <label class"nav__label"> FILTER BY</label>
-        <select class"nav__select">
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
+    <div class="nav__search">
+      <div class="nav__filter">
+        <label>FILTER BY</label>
+        <select>
+          <option>All</option>
+          <option>Jackets</option>
+          <option>Womens</option>
+          <option>Men</option>
         </select>
       </div>
-      <div class"nav__sort">
-        <label class"nav__label">SORT BY</label>
-        <select class"nav__select">
-          <option value="date asc"></option>
-          <option value="date desc"></option>
+
+      <div class="nav__sort">
+        <label>SORT BY</label>
+        <select>
+          <option>Featured</option>
+          <option>Price</option>
+          <option>Date</option>
         </select>
       </div>
     </div>
   </nav>
+
 
   <section class="products">
     <div class="product">
@@ -47,77 +49,74 @@
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
     <div class="product">
       <div class="product__img">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0938/8938/products/10175100258_1_1264x1800_300_RGB_1080x.jpeg"
+          alt="">
       </div>
       <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
+        <h5 class="product__title">Haze Vars</h5>
+        <h6 class="product__price">$132.96</h6>
       </div>
     </div>
-    <div class="product">
-      <div class="product__img">
-        <img src="" alt="">
-      </div>
-      <div class="product__info">
-        <h5 class="product__title"></h5>
-        <h6 class="product__price"></h6>
-      </div>
-    </div>
-
   </section>
 </body>
 
