add less9 task3

--- a/pre_cours/9_positioning_elements/task_3/index.html
+++ b/pre_cours/9_positioning_elements/task_3/index.html
@@ -8,20 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="border">
-        I am learning box model in CSS!
-    </div>
-    <div class="border">
-        I am learning box model in CSS!
-    </div>
-    <div class="border">
-        I am learning box model in CSS!
-    </div>
-    <div class="border">
-        I am learning box model in CSS!
-    </div>
-    <div class="border">
-        I am learning box model in CSS!
-    </div>
+    <div class="block_red"></div>
+    <div class="block_green"></div>
+    <div class="block_blue"></div>
+    <div class="block_yellow"></div>
+    <div class="block_black"></div>
 </body>
 </html>
