--- a/pre_cours/12_text-style/task_4/index.html
+++ b/pre_cours/12_text-style/task_4/index.html
@@ -10,28 +10,25 @@
 </head>
 
 <body>
-    <div>
-        <span>
-            <!DOCTYPE html>
-            <html lang="en">
+    &lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
 
-            <head>
-                <meta charset="UTF-8">
-                <title>Code rendering</title>
-                <style>
-                    div {
-                        font-size: 24px;
-                    }
-                </style>
-            </head>
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;Code rendering&lt;/title&gt;
+    &lt;style&gt;
+        div {
+            font-size: 24px;
+        }
+    &lt;/style&gt;
+&lt;/head&gt;
 
-            <body>
-                <div>Text</div>
-            </body>
+&lt;body&gt;
+    &lt;div&gt;Text&lt;/div&gt;
+&lt;/body&gt;
 
-            </html>
-        </span>
-    </div>
+&lt;/html&gt;
+
 </body>
 
 </html>
