add less12 task4

--- a/pre_cours/12_text-style/task_4/index.html
+++ b/pre_cours/12_text-style/task_4/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <pre>
     &lt;div&gt;
         &lt;span&gt;
             &lt;!DOCTYPE html&gt;
@@ -32,6 +33,7 @@
             &lt;/html&gt;
         &lt;/span&gt;
     &lt;/div&gt;
+   </pre>
 </body>
 
 </html>
