--- a/pre_cours/12_text-style/task_1/index.html
+++ b/pre_cours/12_text-style/task_1/index.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>The Web technologies</title>
 </head>
@@ -17,7 +16,7 @@
   <section>
     <h1>Web technologies</h1>
     <p>
-      <span>HTML</span> (от англ. <em>HyperText Markup Language</em> — «язык гипертекстовой разметки») —
+      <b class="technology">HTML</b> (от англ. <em class="translaton">HyperText Markup Language</em> — «язык гипертекстовой разметки») —
       стандартизированный язык разметки документов во Всемирной паутине. Большинство веб-страниц
       содержат описание разметки на языке HTML (или XHTML). Язык
       <a target="_blank" href="https://ru.wikipedia.org/wiki/HTML">HTML</a> интерпретируется
@@ -25,7 +24,7 @@
       экране монитора компьютера или мобильного устройства.
     </p>
     <p>
-      <span>CSS</span> (/siːɛsɛs/ англ. <em>Cascading Style Sheets</em> — каскадные таблицы стилей) — формальный язык
+      <b class="technology">CSS</b> (/siːɛsɛs/ англ. <em class="translaton">Cascading Style Sheets</em> — каскадные таблицы стилей) — формальный язык
       описания внешнего вида документа, написанного с использованием языка разметки.
     </p>
   </section>
